Add footer and reviews + styling

--- a/frontend/src/components/MovieListComponent.scss
+++ b/frontend/src/components/MovieListComponent.scss
@@ -3,5 +3,11 @@
 .movie-list {
   .movie-list-table {
     @include predefined.section-padding;
+
+    tbody {
+      tr {
+        cursor: pointer;
+      }
+    }
   }
 }
