implement the login

--- a/frontend/src/styles/predefined.scss
+++ b/frontend/src/styles/predefined.scss
@@ -4,6 +4,7 @@ $basic-green: #087056;
 $headings: #007057;
 $white-accent: #ffffff;
 $light-gray-background: #efefef;
+$error: #D8000C;
 
 @mixin section-padding() {
   padding: 60px 40px;
