--- a/frontend/src/components/authentication/LoginComponent.scss
+++ b/frontend/src/components/authentication/LoginComponent.scss
@@ -1,30 +1,32 @@
 @use '../../styles/predefined';
 
 .login-page {
-  @include predefined.section-padding;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  align-items: center;
+  .main {
+    @include predefined.section-padding;
+    text-align: center;
 
-  .user-icon {
-    width: 20%;
-    height: auto;
-    margin-bottom: 30px;
-  }
+    input[type="text"],
+    input[type="password"] {
+      width: 100%;
+      border-radius: 8px;
+      padding: 6px 12px;
+      margin-bottom: 8px;
+    }
 
-  input {
-      height: 50px;
-      width: 50%;
-      border-radius: 25px;
-      padding: 10px;
-  }
+    .error-message {
+      margin-bottom: 8px;
+      color: #D8000C;
+    }
 
-  .login-button {
-      background-color: predefined.$basic-green;
-  }
+    input[type="button"] {
+      width: 100%;
+      border-radius: 8px;
+      padding: 6px 12px;
+    }
 
-  .error-message {
-    color: predefined.$error;
+    .user-icon {
+      font-size: 80px;
+      margin-bottom: 20px;
+    }
   }
 }
