--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+html {
+  height: 100%;
+
+  body {
+    height: 100%;
+
+    #root {
+      height: 100%;
+
+      .app-loading {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+      }
+    }
+  }
+}
