--- a/frontend/src/components/common/ModalComponent.scss
+++ b/frontend/src/components/common/ModalComponent.scss
@@ -1,6 +1,7 @@
 @use '../../styles/predefined';
 
-.review-modal {
+.edit-review-modal,
+.add-review-modal {
   button.submit-form {
     width: 100%;
   }
