--- a/frontend/src/components/movies/MovieDetailReviewsComponent.scss
+++ b/frontend/src/components/movies/MovieDetailReviewsComponent.scss
@@ -1,5 +1,11 @@
 @use '../../styles/predefined';
 
+.reviews-loading-spinner {
+  justify-content: center;
+  display: flex;
+  padding: 20px;
+}
+
 .reviews {
   .section-title {
     display: flex;
