--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -52,6 +52,14 @@ html {
         justify-content: center;
         height: 100%;
       }
+
+      .app-loading-error {
+        width: 100%;
+        height: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     }
   }
 }
