improve error handling for the user profile

--- a/frontend/src/components/user_profile/UserProfileReviewsComponent.scss
+++ b/frontend/src/components/user_profile/UserProfileReviewsComponent.scss
@@ -1,5 +1,21 @@
 @use '../../styles/predefined';
 
+.my-reviews-loading-spinner {
+  height: 100px;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.my-reviews-loading-failed {
+  height: 100px;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .my-reviews {
   .review {
     background-color: predefined.$light-gray-background;
